--- a/styles/pin_close.css
+++ b/styles/pin_close.css
@@ -9,9 +9,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   font-family: Montserrat;
   background-color: #f4f7f6;
 }
@@ -66,9 +63,7 @@ header > span .current {
 }
 
 .back {
-  position: absolute;
-  top: 80px;
-  left: 5vw;
+  margin: 90px 0 50px 70px;
 }
 
 .back a {
@@ -112,17 +107,17 @@ main {
   display: grid;
   -ms-grid-columns: auto 1fr;
       grid-template-columns: auto 1fr;
-  padding: 5vw;
+  padding: 0 5vw;
 }
 
 .image {
   height: 36.6vw;
   width: 65vw;
+  overflow: scroll;
 }
 
 .image img {
   width: 100%;
-  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -281,25 +276,26 @@ main {
   position: absolute;
   z-index: 999;
   left: 0;
+  top: 0;
   -ms-grid-columns: auto auto;
       grid-template-columns: auto auto;
-  gap: 17px;
   place-content: center;
-  margin-top: 5.5px;
-  padding-left: 16px;
-  width: 57px;
-  height: 30px;
   border-radius: 10px;
+  margin-left: 4px;
 }
 
-.prevw .options_menu__trash .trash-confirmation .trash-checkmark {
+.prevw .options_menu__trash .trash-confirmation label {
+  padding: 14px 12px;
   font-size: 18px;
-  color: #129712;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
   cursor: pointer;
+}
+
+.prevw .options_menu__trash .trash-confirmation .trash-checkmark {
+  color: #129712;
 }
 
 .prevw .options_menu__trash .trash-confirmation .trash-checkmark input {
@@ -307,13 +303,7 @@ main {
 }
 
 .prevw .options_menu__trash .trash-confirmation .trash-cross {
-  font-size: 18px;
   color: #da0303;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  cursor: pointer;
 }
 
 .prevw__tags {
@@ -348,6 +338,7 @@ main {
   padding: 0.1em 0 0.1em 0.3em;
   display: -ms-grid;
   display: grid;
+  text-decoration: none;
   -ms-grid-columns: auto 30px;
       grid-template-columns: auto 30px;
 }
