--- a/styles/pins.scss
+++ b/styles/pins.scss
@@ -58,12 +58,16 @@ main {
 
   .tags {
     display: flex;
+    align-items: center;
     justify-content: flex-start;
     margin: -2.5vw 0 2.5vw 0;
     span {
       font-size: 1.5em;
       font-weight: 300;
       margin-right: 1em;
+    }
+    span.alltags {
+      font-size: 1.2em;
     }
     a {
       text-decoration: none;
@@ -85,6 +89,15 @@ main {
         stroke: color(main_text);
         stroke-width: 2;
         stroke-linecap: round;
+      }
+    }
+    a.alltags {
+      opacity: 0.7;
+      font-size: 0.8em;
+      padding: 0.1em 0.3em;
+      margin-right: 0.3em;
+      &:hover, &:focus {
+        opacity: 1;
       }
     }
   }
@@ -266,7 +279,13 @@ main {
 
               &__name {
                 font-size: 1.4em;
+                width: 99%;
                 border: none;
+                padding-bottom: 0.2em !important;
+                border-bottom: 1px solid color(main_text);
+                &:hover, &:focus {
+                  border-color: rgba(238, 94, 94, 1);
+                }
               }
 
               #add_form_pin_tag_container {
@@ -295,6 +314,9 @@ main {
               &__tags {
                 font-size: 1em;
                 border: none;
+                &:hover::placeholder, &:focus::placeholder {
+                  color: rgba(238, 94, 94, 1);
+                }
               }
 
               &__link {
@@ -624,30 +646,28 @@ main {
                 display: none;
                 position: absolute;
                 z-index: 999;
-                left: 0;
+                left: 0; top: 0;
                 grid-template-columns: auto auto;
-                gap: 17px;
                 place-content: center;
-                margin-top: 5.5px;
-                padding-left: 16px;
-                width: 57px;
-                height: 30px;
                 border-radius: 10px;
+                margin-left: 4px;
+
+                label {
+                  padding: 14px 12px;
+                  font-size: 18px;
+                  user-select: none;
+                  cursor: pointer;
+                }
 
                 .trash-checkmark {
-                    font-size: 18px;
-                    color: rgb(18, 151, 18);
-                    user-select: none;
-                    cursor: pointer;
-                    input {
-                      display: none;
-                    }
+                  color: rgb(18, 151, 18);
+                  input {
+                    display: none;
+                  }
                 }
+
                 .trash-cross {
-                    font-size: 18px;
-                    color: rgb(218, 3, 3);
-                    user-select: none;
-                    cursor: pointer;
+                  color: rgb(218, 3, 3);
                 }
               }
             }
